Added Swift, Tex and the ability dump strings for development purposes

--- a/Project/Prism.xcodeproj/xcshareddata/xcschemes/Prism.xcscheme
+++ b/Project/Prism.xcodeproj/xcshareddata/xcschemes/Prism.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:Prism.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-prism-dump-strings YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
